Update to Lucky

--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bellscoin Arcade</title>
+    <title>Luckycoin Arcade</title>
     <style>
         body {
             margin: 0;
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bellscoin Arcade</h1>
+        <h1>Luckycoin Arcade</h1>
         <input type="text" id="inscriptionID" placeholder="Enter Inscription ID" onkeydown="handleKeyPress(event)">
         <br>
         <button onclick="submitInscriptionID()">Submit</button>
